--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -1,34 +1,54 @@
-| TAG    | NAME IN REPO (or git url)                  | PURPOSE (should be a verb phrase to sound right while installing)           |
-|--------+--------------------------------------------+-----------------------------------------------------------------------------|
-| pacman | nodejs                                     | node.js is needed to run some programs ahead                                |
-| pacman | npm                                        | node.js pacage manager                                                      |
-| pacman | python-pip                                 | python's package manager                                                    |
-| pip    | youtube-dl                                 | can download any YouTube video (or playlist or channel) when given the link |
-| pacman | youtube-viewer                             | is a terminal interface for watching YouTube videos without a browser       |
-| pacman | zathura                                    | is a pdf viewer with vim-like bindings                                      |
-| pacman | zathura-djvu                               | gives zathura the ability to read .djvu files                               |
-| pacman | zathura-pdf-mupdf                          | allows mupdf pdf compatibility in zathura                                   |
-| pacman | firefox                                    | chromium is good but firefox is not bad                                     |
-| pacman | newsboat                                   | is a terminal RSS client                                                    |
-| pacman | libreoffice                                | because off course someone will send a file that is not a plain text...     |
-| pacman | jdk8-openjdk                               | Java 8 development kit                                                      |
-| pacman | firejail                                   | keeps untrusted software in jail                                            |
-| pacman | net-tools                                  | some handy networking tools                                                 |
-| pacman | traceroute                                 | trace the route to the host                                                 |
-| pacman | arch-install-scripts                       | contains some helpful scripts to install or maintain arch                   |
-| pacman | gimp                                       | the gnu image manipulation program                                          |
-| pacman | imagemagick                                | the magical image editor                                                    |
-| aur    | paper-icon-theme                           | a nicer GTK icon theme                                                      |
-| pacman | cmus                                       | the little simple music player                                              |
-| npm    | lyrics-cli                                 | find lyrics from the command-line                                           |
-| pacman | virtual-box                                | the chosen virtual machine                                                  |
-| pacman | virtualbox-host-modules-arch               | virtual-box kernel modules                                                  |
-| pacman | neofetch                                   | displays system's information                                               |
-| pacman | sl                                         | cures the bad habit of miss-typing                                          |
-| pacman | cowsay                                     | a wise cow                                                                  |
-| pacman | fortune                                    | some wise quotes                                                            |
-| pacman | lolcat                                     | colored cat                                                                 |
-| git    | https://github.com/pipeseroni/pipes.sh.git | pipes screensaver                                                           |
-| pacman | colordiff                                  | a more colorful diff                                                        |
-| pacman | nautilus                                   | GNOME's file manager                                                        |
-| pacman | evince                                     | GNOME's reader                                                              |
+| TAG    | NAME IN REPO (or git url)                  | PURPOSE (should be a verb phrase to sound right while installing)                              |
+|--------+--------------------------------------------+------------------------------------------------------------------------------------------------|
+| pacman | nodejs                                     | node.js is needed to run some programs ahead                                                   |
+| pacman | npm                                        | node.js pacage manager                                                                         |
+| pacman | python-pip                                 | python's package manager                                                                       |
+| pip    | youtube-dl                                 | can download any YouTube video (or playlist or channel) when given the link                    |
+| pacman | youtube-viewer                             | is a terminal interface for watching YouTube videos without a browser                          |
+| pacman | zathura                                    | is a pdf viewer with vim-like bindings                                                         |
+| pacman | zathura-djvu                               | gives zathura the ability to read .djvu files                                                  |
+| pacman | zathura-pdf-mupdf                          | allows mupdf pdf compatibility in zathura                                                      |
+| pacman | firefox                                    | chromium is good but firefox is not bad                                                        |
+| pacman | newsboat                                   | is a terminal RSS client                                                                       |
+| pacman | libreoffice                                | because off course someone will send a file that is not a plain text...                        |
+| pacman | jdk8-openjdk                               | Java 8 development kit                                                                         |
+| pacman | firejail                                   | keeps untrusted software in jail                                                               |
+| pacman | net-tools                                  | some handy networking tools                                                                    |
+| pacman | traceroute                                 | trace the route to the host                                                                    |
+| pacman | arch-install-scripts                       | contains some helpful scripts to install or maintain arch                                      |
+| pacman | gimp                                       | the gnu image manipulation program                                                             |
+| pacman | imagemagick                                | the magical image editor                                                                       |
+| aur    | paper-icon-theme                           | a nicer GTK icon theme                                                                         |
+| pacman | cmus                                       | the little simple music player                                                                 |
+| npm    | lyrics-cli                                 | find lyrics from the command-line                                                              |
+| pacman | virtual-box                                | the chosen virtual machine                                                                     |
+| pacman | virtualbox-host-modules-arch               | virtual-box kernel modules                                                                     |
+| pacman | neofetch                                   | displays system's information                                                                  |
+| pacman | sl                                         | cures the bad habit of miss-typing                                                             |
+| pacman | cowsay                                     | a wise cow                                                                                     |
+| pacman | fortune                                    | some wise quotes                                                                               |
+| pacman | lolcat                                     | colored cat                                                                                    |
+| git    | https://github.com/pipeseroni/pipes.sh.git | pipes screensaver                                                                              |
+| pacman | colordiff                                  | a more colorful diff                                                                           |
+| pacman | nautilus                                   | GNOME's file manager                                                                           |
+| pacman | evince                                     | GNOME's reader                                                                                 |
+| pacman | wine                                       | runs Windows programs. Always be careful while using non free software. Best fit with firejail |
+| pacman | wine-mono                                  | needed by wine                                                                                 |
+| pacman | wine_gecko                                 | needed by wine                                                                                 |
+| pacman | libwbclient                                | needed for wine                                                                                |
+| pacman | samba                                      | needed for wine                                                                                |
+| pacman | mpg123                                     | needed for wine                                                                                |
+| pacman | lib32-mpg123                               | needed for wine                                                                                |
+| pacman | lib32-gnutls                               | needed for wine                                                                                |
+| pacman | alsa-firmware                              | sound related stuff                                                                            |
+| pacman | alsa-lib                                   | sound related stuff                                                                            |
+| pacman | alsa-plugins                               | sound related stuff                                                                            |
+| pacman | alsa-utils                                 | sound related stuff                                                                            |
+| pacman | lib32-alsa-lib                             | sound related stuff                                                                            |
+| pacman | lib32-alsa-plugins                         | sound related stuff                                                                            |
+| pacman | pulseaudio-alsa                            | sound related stuff                                                                            |
+| pacman | lib32-libpulse                             | sound related stuff                                                                            |
+| pacman | libcanberra-pulse                          | sound related stuff                                                                            |
+| pacman | libpulse                                   | sound related stuff                                                                            |
+| pacman | pulseaudio                                 | sound related stuff                                                                            |
+| pacman | lib32-openal                               | sound related stuff                                                                            |
