--- a/packages/themostsignificant.org
+++ b/packages/themostsignificant.org
@@ -7,3 +7,5 @@
 | pacman | lolcat                                     | colored cat                                                       |
 | git    | https://github.com/pipeseroni/pipes.sh.git | pipes screensaver                                                 |
 | pacman | cmatrix                                    | now you are neo                                                   |
+| pacman | toilet                                     | display large colourful characters                                |
+| pacman | cool-retro-term                            | CRT terminal                                                      |
