couple of things

--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -50,3 +50,4 @@
 | pacman | opendesktop-fonts            | Japanese font                                                                                  |
 | aur    | adwaita-qt5                  | Adwaita GNOME theme for Qt5                                                                    |
 | aur    | adwaita-qt4                  | Adwaita GNOME theme for Qt4                                                                    |
+| pacman | transset-df                  | used to change the window opacity                                                              |
