--- a/packages/themostsignificant.org
+++ b/packages/themostsignificant.org
@@ -9,3 +9,4 @@
 | pacman | cmatrix                                    | now you are neo                                                   |
 | pacman | toilet                                     | display large colourful characters                                |
 | pacman | cool-retro-term                            | CRT terminal                                                      |
+| aur    | cli-visualizer                             | a CLI visualizer                                                  |
