--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -52,3 +52,6 @@
 | aur    | adwaita-qt4                  | Adwaita GNOME theme for Qt4                                                                    |
 | pacman | transset-df                  | used to change the window opacity                                                              |
 | pacman | translate-shell              | a command-line translator                                                                      |
+| pip    | numpy                        | some actual math in python                                                                     |
+| pip    | matplotlib                   | math plotting in python                                                                        |
+| pacman | python-pmw                   | needed for matplotlib                                                                          |
