--- a/packages/devel.org
+++ b/packages/devel.org
@@ -5,5 +5,6 @@
 | aur    | android-studio            | Android studio IDE                                                |
 | pacman | cloc                      | Calculates lines of code                                          |
 | pacman | cmake                     | CMake build system                                                |
+| pacman | clang                     | another cool c compiler                                           |
 | pacman | arm-none-eabi-gcc         | arm toys                                                          |
 | pacman | arm-none-eabi-newlib      | more arm toys                                                     |
