--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -24,6 +24,7 @@
 | pacman | virtual-box                  | the chosen virtual machine                                                                     |
 | pacman | virtualbox-host-modules-arch | virtual-box kernel modules                                                                     |
 | pacman | colordiff                    | a more colorful diff                                                                           |
+| pacman | wdiff                        | diff but for words                                                                             |
 | pacman | nautilus                     | GNOME's file manager                                                                           |
 | pacman | evince                       | GNOME's reader                                                                                 |
 | pacman | wine                         | runs Windows programs. Always be careful while using non free software. Best fit with firejail |
