--- a/packages/themostsignificant.org
+++ b/packages/themostsignificant.org
@@ -10,3 +10,4 @@
 | pacman | toilet                                     | display large colourful characters                                |
 | pacman | cool-retro-term                            | CRT terminal                                                      |
 | aur    | cli-visualizer                             | a CLI visualizer                                                  |
+| aur    | browsh                                     | a terminal web browser                                            |
