--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -3,7 +3,9 @@
 | pacman | nodejs                       | node.js is needed to run some programs ahead                                                   |
 | pacman | npm                          | node.js pacage manager                                                                         |
 | pacman | python-pip                   | python's package manager                                                                       |
+| pacman | python2-pip                  | python2 pip                                                                                    |
 | pip    | youtube-dl                   | can download any YouTube video (or playlist or channel) when given the link                    |
+| pip2   | BeautifulSoup                | beautiful soup for python2.7                                                                   |
 | pacman | youtube-viewer               | is a terminal interface for watching YouTube videos without a browser                          |
 | pacman | zathura                      | is a pdf viewer with vim-like bindings                                                         |
 | pacman | zathura-djvu                 | gives zathura the ability to read .djvu files                                                  |
@@ -20,7 +22,6 @@
 | pacman | imagemagick                  | the magical image editor                                                                       |
 | aur    | paper-icon-theme             | a nicer GTK icon theme                                                                         |
 | pacman | cmus                         | the little simple music player                                                                 |
-| npm    | lyrics-cli                   | find lyrics from the command-line                                                              |
 | pacman | virtual-box                  | the chosen virtual machine                                                                     |
 | pacman | virtualbox-host-modules-arch | virtual-box kernel modules                                                                     |
 | pacman | colordiff                    | a more colorful diff                                                                           |
