couple of things

--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -59,3 +59,4 @@
 | pacman | python-pmw                   | needed for matplotlib                                                                          |
 | pacman | texlive-most                 | tex stuff                                                                                      |
 | pacman | biber                        | tex biber                                                                                      |
+| aur    | screenkey                    | display the pressed keys on the screen. Useful for screen casting                              |
