--- a/packages/devel.org
+++ b/packages/devel.org
@@ -10,3 +10,4 @@
 | pacman | arm-none-eabi-newlib      | more arm toys                                                     |
 | pacman | emscripten                | llvm to javascript                                                |
 | aur    | umlet                     | UML builder                                                       |
+| pacman | yarn                      | dependency installer                                              |
