--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -70,3 +70,4 @@
 | pacman | sysstat                      | a collection of performance monitoring tools (iostat,isag,mpstat,pidstat,sadf,sar)             |
 | pacman | ditta                        | draw with ASCII                                                                                |
 | npm    | cloudconvert                 | usefull to convert ugly documents written in non-free softwares                                |
+| pacman | mlocate                      | find files quickly                                                                             |
