--- a/packages/games.org
+++ b/packages/games.org
@@ -1,6 +1,7 @@
-| TAG    | NAME IN REPO (or git url) | PURPOSE (should be a verb phrase to sound right while installing)                              |
-|--------+---------------------------+------------------------------------------------------------------------------------------------|
-| pacman | gnome-chess               | in case you like chess                                                                         |
-| pacman | gnome-mines               | and minesweeper                                                                                |
-| pacman | mgba-qt                   | a gameboy emulator                                                                             |
-| pacman | mednafen                  | another emulator                                                                               |
+| TAG    | NAME IN REPO (or git url) | PURPOSE (should be a verb phrase to sound right while installing) |
+|--------+---------------------------+-------------------------------------------------------------------|
+| pacman | gnome-mines               | and minesweeper                                                   |
+| pacman | gnome-chess               | in case you like chess                                            |
+| pacman | gnuchess                  | the GNU chess engine                                              |
+| pacman | mgba-qt                   | a gameboy emulator                                                |
+| pacman | mednafen                  | another emulator                                                  |
