--- a/packages/games.org
+++ b/packages/games.org
@@ -5,3 +5,4 @@
 | pacman | gnuchess                  | the GNU chess engine                                              |
 | pacman | mgba-qt                   | a gameboy emulator                                                |
 | pacman | mednafen                  | another emulator                                                  |
+| pacman | mupen64plus               | N64 emulator                                                      |
