--- a/packages/themostsignificant.org
+++ b/packages/themostsignificant.org
@@ -8,6 +8,8 @@
 | git    | https://github.com/pipeseroni/pipes.sh.git | pipes screensaver                                                 |
 | pacman | cmatrix                                    | now you are neo                                                   |
 | pacman | toilet                                     | display large colourful characters                                |
+| pacman | figlet                                     | display large characters made up of ordinary screen characters    |
+| aur    | figlet-fonts                               | more fonts for figlet                                             |
 | pacman | cool-retro-term                            | CRT terminal                                                      |
 | aur    | cli-visualizer                             | a CLI visualizer                                                  |
 | aur    | browsh                                     | a terminal web browser                                            |
