--- a/packages/devel.org
+++ b/packages/devel.org
@@ -16,3 +16,4 @@
 | pacman | ltrace                    | trace library function calls                                      |
 | pacman | radare2                   | the best reverse engineering toy out there                        |
 | npm    | tern                      | JavaScript analyzer (needed for Emacs)                            |
+| npm    | js-beautify               | beautify web                                                      |
