--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -73,3 +73,4 @@
 | npm    | cloudconvert                 | usefull to convert ugly documents written in non-free softwares                                |
 | pacman | mlocate                      | find files quickly                                                                             |
 | npm    | wikit                        | cli wikipedia                                                                                  |
+| pacman | perl-file-mimeinfo           | file opener with mime type                                                                     |
