--- a/packages/devel.org
+++ b/packages/devel.org
@@ -17,3 +17,4 @@
 | pacman | radare2                   | the best reverse engineering toy out there                        |
 | npm    | tern                      | JavaScript analyzer (needed for Emacs)                            |
 | npm    | js-beautify               | beautify web                                                      |
+| npm    | fx                        | a cool way to view JSON                                           |
