--- a/packages/base.org
+++ b/packages/base.org
@@ -16,7 +16,6 @@
 | pacman   | ttf-liberation                            | another pretty font                                               |
 | pacman   | ttf-dejavu                                | the preferred monospace font                                      |
 | aur      | ttf-font-awesome                          | used for the icons in the top bar                                 |
-| pacman   | ranger                                    | is an extensive terminal file manager that everyone likes         |
 | aur      | lf                                        | another terminal file manager cloning ranger but faster           |
 | pacman   | arandr                                    | is a UI for screen adjustment                                     |
 | pacman   | compton                                   | for transparency and removing screen-tearing                      |
@@ -77,3 +76,4 @@
 | pacman   | ffmpegthumbnailer                         | video thumbnails. Needed for ranger                               |
 | aur      | simple-mtpfs                              | MTP mounter using fuse                                            |
 | aur      | vidir                                     | edit files names in your favorite editor                          |
+| pacman   | perl-image-exiftool                       | media details                                                     |
