--- a/packages/base.org
+++ b/packages/base.org
@@ -79,3 +79,4 @@
 | pacman   | perl-image-exiftool                              | media details                                                     |
 | git      | https://github.com/Naheel-Azawy/adwaita-too-dark | the used GTK theme                                                |
 | git      | https://github.com/Naheel-Azawy/Executor.git     | executes everything                                               |
+| git      | https://github.com/Naheel-Azawy/cp_p             | cp with progress                                                  |
