--- a/packages/themostsignificant.org
+++ b/packages/themostsignificant.org
@@ -14,3 +14,4 @@
 | aur    | cli-visualizer                             | a CLI visualizer                                                  |
 | aur    | browsh                                     | a terminal web browser                                            |
 | pip    | termdown                                   | the ultimate countdown and stopwatch                              |
+| npm    | mapsci                                     | terminal map                                                      |
