--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -23,6 +23,10 @@
 | pacman | imagemagick                           | the magical image editor                                                                       |
 | aur    | paper-icon-theme                      | a nicer GTK icon theme                                                                         |
 | pacman | cmus                                  | the little simple music player                                                                 |
+| pacman | mpd                                   | music player daemon (another music player)                                                     |
+| pacman | mpc                                   | mpd client                                                                                     |
+| pacman | ncmpcpp                               | mpd UI                                                                                         |
+| aur    | fmui                                  | mpd UI with fzf                                                                                |
 | pacman | virtual-box                           | the chosen virtual machine                                                                     |
 | pacman | virtualbox-host-modules-arch          | virtual-box kernel modules                                                                     |
 | pacman | colordiff                             | a more colorful diff                                                                           |
